--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,29 @@
-teste
+name: Run Tests
+
+on:
+  push:
+    branches:
+      - main  # Ou o nome da sua branch principal
+  pull_request:
+    branches:
+      - main  # Ou o nome da sua branch principal
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'  # Defina a versão do Node.js que você está usando
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Run tests
+      run: npm test -- --testPathPattern=pesquisar.test.js  # Chama o arquivo de teste específico
+
